manifest/wordpress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
