manifest/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    cert-manager.io/renew-before: 360h  # 15 days before expiration
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: aditya.ddns.net  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
  tls:
  - hosts:
    - aditya.ddns.net  # Replace with your actual domain
    secretName: nginx-wordpress-tls
